<resources>
    <string name="app_name">Calendar</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="startdate">"Start Date"</string>
    <string name="enddate">End Date</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="alldaye">All Day Event</string>
    <string name="reminder">Reminder(Start Time)</string>
    <string name="eventcreated">Event Created Successfully</string>
    <string name="notification9">Notification will be on 9 AM</string>
    <string name="notification">Notification</string>
    <string name="vibrate">Vibrate</string>
    <string name="reminder9">Reminder will be on 9 AM</string>
    <string name="timedate">Insert Time Data</string>
    <string name="requireddate">Insert All Required Data</string>
    <string name="deleteevent">Delete This Event?</string>
    <string name="eventDelete">Delete Event</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="event_deleted">Event Deleted</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="eventupdated">Event Updated Successfully</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="alldayshow"> All Day</string>
    <string name="reminderre">Reminder</string>
    <string name="done">Done</string>
    <string name="today">Today</string>
    <string name="goto1">GoTo</string>
    <string name="schedule">Schedule</string>
    <string name="weekstartsfrom">Week Starts From</string>
    <string name="main2activity">Add Event</string>
    <string name="main3activity">Event Details</string>
    <string name="main4activity">Edit Event</string>
    <string name="main5activity">Schedule</string>
    <string name="event">Event : </string>
    <string name="locationreminder">_Location : </string>
    <string name="timenow"> Time Now</string>
</resources>
