<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="@dimen/itemswidth"
                android:layout_height="@dimen/itemsheight"
                android:gravity="center|start"
                android:text="@string/title"></TextView>


            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="@dimen/itemswidth"
                android:layout_height="@dimen/itemsheight"
                android:gravity="center|start"
                android:text="@string/location"></TextView>


            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="@dimen/itemswidth"
                android:layout_height="@dimen/itemsheight"
                android:gravity="center|start"
                android:text="@string/startdate"
                />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="@dimen/itemswidth"
                android:layout_height="@dimen/itemsheight"
                android:gravity="center|start"
                android:text="@string/enddate"
                 />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="@dimen/itemswidth"
                android:layout_height="@dimen/itemsheight"
                android:gravity="center|start"
                android:text="@string/description"
                 />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/itemsheight"
                android:layout_gravity="center"
                android:gravity="center" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView40"
                android:layout_width="@dimen/itemswidth"
                android:layout_height="@dimen/itemsheight"
                android:gravity="center|start"
                android:text="@string/reminderre" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="match_parent"
                android:layout_height="@dimen/itemsheight"
                android:layout_gravity="center"
                android:gravity="center" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView500"
                android:layout_width="@dimen/itemswidth"
                android:layout_height="@dimen/itemsheight"
                android:gravity="center|start"
                android:text="@string/notification" />

            <TextView
                android:id="@+id/textView600"
                android:layout_width="match_parent"
                android:layout_height="@dimen/itemsheight"
                android:layout_gravity="center"
                android:gravity="center" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView700"
                android:layout_width="@dimen/itemswidth"
                android:layout_height="@dimen/itemsheight"
                android:gravity="center|start"
                android:text="@string/vibrate" />

            <TextView
                android:id="@+id/textView800"
                android:layout_width="match_parent"
                android:layout_height="@dimen/itemsheight"
                android:layout_gravity="center"
                android:gravity="center" />


        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:background="@drawable/edit" />

    <Button
        android:id="@+id/button2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:background="@drawable/delete" />
</android.support.design.widget.CoordinatorLayout>